# maize_pests_challenge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  USER_GUIDE.md  evaluation.py  generate_submission.py  main.py  preprocessing.py  pyproject.toml  quantize.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  train.py  training.py
