[metadata]
name = fall_armyworm_detection
version = attr: src.__version__
description = A deep learning system for detecting fall armyworm infestation in maize plants
long_description = file: README.md
long_description_content_type = text/markdown
author = Fall Armyworm Detection Team
author_email = example@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
project_urls =
    Bug Tracker = https://github.com/NgangaKamau3/fall_armyworm_detection/issues
    Source Code = https://github.com/NgangaKamau3/fall_armyworm_detection

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.9.0
    torchvision>=0.10.0
    numpy>=1.20.0
    pandas>=1.3.0
    matplotlib>=3.4.0
    scikit-learn>=0.24.0
    tqdm>=4.60.0
    Pillow>=8.2.0
    seaborn>=0.11.0
    onnx>=1.10.0
    onnxruntime>=1.8.0
    opencv-python>=4.5.0
    pathlib>=1.0.1

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    black>=21.5b2
    flake8>=3.9.0
    isort>=5.9.0
    mypy>=0.812
    pre-commit>=2.13.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2
    twine>=3.4.0
    wheel>=0.36.2

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    .tox,
    .venv,
    venv